Fix atlas main-logo position issue on small screen (below-md)

--- a/app/assets/scss/pages/_atlas.scss
+++ b/app/assets/scss/pages/_atlas.scss
@@ -39,6 +39,8 @@
 .atlas-header .main-logo {
   @include breakpoint($below-md) {
     width: 80%;
+    max-width: 350px;
+    max-height: 66px;
   }
 }
 
